# node

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.c  node.c  renderer.json
include/node/: node.h
resources/: deferred.json  program.json  shader.json
